--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 		</developer>
 	</developers>
 
+	<scm>
+		<connection>scm:git:git://github.com/lukasz-kusnierz/validation.git</connection>
+		<developerConnection>scm:git:git@github.com:lukasz-kusnierz/validation.git</developerConnection>
+		<url>http://github.com/lukasz-kusnierz/validation</url>
+	</scm>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
